--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
         "deploy": "gh-pages -d out"
     },
     "dependencies": {
-        "@clerk/nextjs": "^6.9.9",
+        "@clerk/clerk-sdk-node": "^5.1.6",
+        "@clerk/nextjs": "^6.9.10",
         "@clerk/themes": "^2.2.5",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
@@ -38,6 +39,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
+        "svix": "^1.45.1",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.24.1"
