--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
         "@hookform/resolvers": "^3.10.0",
         "@mui/icons-material": "^6.3.1",
         "@mui/material": "^6.3.1",
+        "@radix-ui/react-alert-dialog": "^1.1.4",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.4",
