--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,6 +1,14 @@
-[phases]
-install = "chmod +x ./mvnw && ./mvnw dependency:resolve"
-build = "chmod +x ./mvnw && ./mvnw package -DskipTests"
+[phases.install]
+cmds = [
+  "chmod +x ./mvnw",
+  "./mvnw dependency:resolve"
+]
+
+[phases.build]
+cmds = [
+  "chmod +x ./mvnw",
+  "./mvnw clean package -DskipTests"
+]
 
 [environment]
 JDK_VERSION = "21"
