--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=app
 spring.data.mongodb.database=${env.MONGO_DATABASE}
 spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
+frontend_url=${env.FRONTEND_URL}
