--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,7 @@
         "lucide-react": "^0.471.0",
         "next": "15.1.4",
         "react": "^19.0.0",
-        "react-day-picker": "^8.10.1",
+        "react-date-range": "^2.0.1",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
         "svix": "^1.45.1",
@@ -54,6 +54,7 @@
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^19",
+        "@types/react-date-range": "^1.4.9",
         "@types/react-dom": "^19",
         "gh-pages": "^6.3.0",
         "postcss": "^8",
