--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
         "@radix-ui/react-toast": "^1.2.4",
         "@radix-ui/react-tooltip": "^1.1.6",
         "@tanstack/react-table": "^8.20.6",
+        "@vercel/blob": "^0.27.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
